Proposal section and TTr section completed